# automl-metafeatures-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  data_service_client.py  db.py  main.py  models.py  schemas.py  service.py
tests/: conftest.py  test_metafeatures_api.py
