[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-metafeatures-service"
version = "0.1.0"
description = "Meta-feature extraction microservice. Given a dataset id, computes simple/distributional/information/landmarking meta-features and caches them in Postgres."
requires-python = ">=3.11"
dependencies = [
    "automl-reusables @ git+https://github.com/Major-Proj-AutoML/automl-reusables.git@main",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
